--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  "rewrites": [
+    {
+      "source": "/((?!assets|.*\\..*).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
